--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -42,7 +42,7 @@
               
               img.img-a(src="assets/images/pages/ilustraciones/Grupo_14118.svg").img-fluid
 
-      .jumbotron.bg-1.mt-5
+      .jumbotron.bg-white.mt-0
               img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14132.svg").img-fluid.mt-5
              
               p Las soluciones creativas son fruto de un trabajo previo intenso que incluye el ensayo y el error en pruebas, es producto de aproximaciones y de cambios.
@@ -99,14 +99,14 @@
                 img.img-a.my-3(src="assets/images/pages/ilustraciones/linebreak.svg").img-fluid
 
       .jumbotron.bg-white.mt-5   
-        .sub-ecored-teme
+        .sub-ecored
             .row.justify-content-center.align-items-center
                 .col-auto     
                 img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14173.svg").img-fluid
                 
                 .col-2 
 
-                h1 Tecnicas creativas: 
+                h2 Tecnicas creativas: 
 
                 p Las técnicas creativas implican el desarrollo de métodos que permiten ver las situaciones desde diferentes aspectos. Para la mayoría de las personas es complicado pensar lateralmente; es decir, salir de lo convencional y proponer soluciones prácticas, pero no comunes. Estas técnicas incentivan el pensamiento disruptivo, la creación de nuevas ideas, el mejoramiento de las ya existentes o la adecuación de soluciones anteriores a problemas actuales.
 
@@ -117,13 +117,13 @@
             .row.justify-content-center.align-items-center
                 .col-auto     
               
-                h1 Lluvia de ideas o Brainstorming: 
+                h3 Lluvia de ideas o Brainstorming: 
                 .col-auto
                 img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14193.svg").img-fluid
 
                 .col
                 
-                h2 Análisis morfológico
+                h3 Análisis morfológico
 
                 p Es una de las técnicas más valiosas para generar gran cantidad de ideas en un corto período de tiempo y se desarrolló en los trabajos tecnológicos de la astrofísica y las investigaciones espaciales llevadas a cabo en los años cuarenta, como resultado de los adelantos del astrónomo Fritz Zwicky.
 
@@ -169,7 +169,7 @@
       
       .jumbotron.bg-white
             
-            h2 Matriz ejemplo:
+            h3 Matriz ejemplo:
 
               p Una empresa de lácteos está buscando realizar un nuevo proceso de promoción para su nueva leche saborizada con vitaminas dirigida a adultos mayores:
 
