--- a/source/pug/info.pug
+++ b/source/pug/info.pug
@@ -5,7 +5,7 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
-        title Información del programa: Servicio al cliente
+        title Tecnología en Desarrollo Publicitario
         meta(meta name="description" content="Ruta de aprendizaje programa Servicio al cliente.")    
         link(rel="icon",type="image/svg+xml",href="assets/images/logos/senaLogo.svg")
         link(rel="stylesheet", href="assets/fonts/feather/feather.css")
@@ -31,7 +31,7 @@ html(lang="es")
 
                             .col-12.col-lg-6
 
-                                h3.curso-subtitulo Servicio al cliente
+                                h3.curso-subtitulo Tecnología en Desarrollo Publicitario
                                 h1.curso-titulo Información del programa
 
                                 .brand-line-primary
@@ -39,7 +39,7 @@ html(lang="es")
                                 p.curso-descripcion
                                     ul.text-white 
                                         li 
-                                            span #[strong Nombre del programa:] Servicio al cliente
+                                            span #[strong Nombre del programa:] Tecnología en Desarrollo Publicitario
                                         li 
                                             span #[strong Código:] 13530001
                                         li 
@@ -85,7 +85,7 @@ html(lang="es")
                 .brand-line-primary
 
                 
-                p.mt-5 El SENA presenta el curso complementario denominado Servicio al Cliente, el cual brinda respuesta a los requerimientos de las empresas para desarrollar altos procesos de cualificación en sus colaboradores.
+                p.mt-5 El SENA presenta el curso complementario denominado Tecnología en Desarrollo Publicitario, el cual brinda respuesta a los requerimientos de las empresas para desarrollar altos procesos de cualificación en sus colaboradores.
                 
                 p Partiendo de la premisa organizacional que indica que los clientes son la razón de ser de cualquier empresa, en un entorno globalizado donde las comunicaciones son cada vez más ágiles, el consumidor es el que decide cuándo, dónde y por cuánto tiempo comprar, es importante para los empresarios contar con talento humano capaz de fidelizar y retener clientes que contribuyan con la sostenibilidad económica de sus unidades productivas.
                 
