--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -22,7 +22,7 @@ mixin pageHeader(tituloTema, srcImagen, pagina)
                         img.img-fluid(src='assets/images/header/icon_dots.svg', alt='alt')
 
                 else 
-                    p.curso-descripcion Se habla mucho de la creatividad y es un concepto de moda en muchas áreas; desde la superación personal con el concepto de coaching, pasando por la creación de nuevos emprendimientos en lo que hoy se denominan startup, hasta en la investigación científica. Lo cierto es que es inherente al ser humano y podría decirse que está presente en ciertos comportamientos de algunos animales, si se remite al concepto estricto de lo que es creatividad, (la solución de problemas).
+                    p.curso-descripcion En el ámbito de la publicidad y la comunicación, la creatividad se hace necesaria e indispensable, ya que los anunciantes están siempre en la búsqueda de agencias o publicistas que realicen para ellos anuncios que marquen la diferencia y den un toque de originalidad y diferenciación a sus productos frente a la competencia. Sin embargo, en la realización publicitaria la creatividad tiene cabida en todos los frentes: medios, estrategias, redacción de textos, creación de imágenes, merchandising y promoción de ventas.
         
                 if pagina == 'home'
                     a.curso-btn-iniciar.btn.btn-light(href="main.html")
@@ -193,7 +193,8 @@ mixin creditosFooter(ruta)
                     p.footer-texto
                         | #[strong Edgar Mauricio Cortes]<br/>
                         | #[strong Magdi Khalifah Gamboa]<br/>    
-                        | #[strong Gustavo Adolfo Marún Suárez]<br/>               
+                        | #[strong Gustavo Adolfo Marún Suárez]<br/>
+                        | #[strong Ricardo Alfonso González Vargas]<br/>                   
                         span.text-small Desarrollo front-end<br/>
 
                     p.footer-texto
