--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -5,10 +5,8 @@ h2  Resultados de <br>aprendizaje
     .card-body
         ul.bg-color-dark
             li 
-                span Reconocer XXXXX.
-            li
-                span Valorar XXXX.
-
+                span Establecer el concepto creativo de la campaña teniendo en cuenta el brief.
+           
 
 
 
