--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -1,6 +1,6 @@
 .container
       .header-ecored 
-        h1 1. ESTRATEGIA CREATIVA     
+        h1 1. Introducción     
          
       .embed-responsive.embed-responsive-16by9.mt-5
         iframe.embed-responsive-item(width='560', height='315', src='https://www.youtube.com/embed/hyaC1DOSYE8', frameborder='0', allow='accelerometer; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
@@ -12,9 +12,9 @@
 
         .row.justify-content-center.align-items-center.mt-5
           .col-5
-            img.img-a(src="assets/images/pages/ilustraciones/474.svg").img-fluid
+            img.img-a(src="assets/images/pages/ilustraciones/13.png").img-fluid
           .col-5
-            img.img-a(src="assets/images/pages/ilustraciones/12.svg").img-fluid
+            img.img-a(src="assets/images/pages/ilustraciones/12.png").img-fluid
             
       
         .row.justify-content-center.align-items-center
@@ -23,7 +23,7 @@
 
           .col-10.mt-8
 
-            .sub-ecored.mt-5#tema1_2 
+            .sub-ecored.mt-5#tema1_2  
               h2 1.2 Definiciones de creatividad
                       
               p El sustantivo creatividad procede etimológicamente de la palabra creare, evoluciona hacia criar y llega a la actualidad derivada del verbo crear. La primera utilización escrita del término en inglés data de 1875 cuando Ward califica sin definir la aptitud de Shakespeare con la acepción «creatividad poética». La primera definición del concepto aparece en el año 1961, en el Webster’s Third Dictionary como «habilidad de crear».
@@ -106,7 +106,7 @@
                 
                 .col-2 
 
-                h2 Tecnicas creativas: 
+                h2 1.3.1. Técnicas creativas
 
                 p Las técnicas creativas implican el desarrollo de métodos que permiten ver las situaciones desde diferentes aspectos. Para la mayoría de las personas es complicado pensar lateralmente; es decir, salir de lo convencional y proponer soluciones prácticas, pero no comunes. Estas técnicas incentivan el pensamiento disruptivo, la creación de nuevas ideas, el mejoramiento de las ya existentes o la adecuación de soluciones anteriores a problemas actuales.
 
@@ -117,13 +117,13 @@
             .row.justify-content-center.align-items-center
                 .col-auto     
               
-                h3 Lluvia de ideas o Brainstorming: 
+                h3 1.3.1.1 Lluvia de ideas o Brainstorming: 
                 .col-auto
-                img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14193.svg").img-fluid
+                 img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14193.svg").img-fluid
 
-                .col
+                 .col
                 
-                h3 Análisis morfológico
+                h3 1.3.1.2 Análisis morfológico
 
                 p Es una de las técnicas más valiosas para generar gran cantidad de ideas en un corto período de tiempo y se desarrolló en los trabajos tecnológicos de la astrofísica y las investigaciones espaciales llevadas a cabo en los años cuarenta, como resultado de los adelantos del astrónomo Fritz Zwicky.
 
@@ -181,7 +181,7 @@
 
                   .col-auto
                     
-                    h1 Analogías
+                    h1 1.3.1.3 Analogías
 
                     p Consiste en resolver un problema mediante un rodeo: en vez de atacarlo de frente se compara ese problema o situación con otra cosa. Gordon, creador de la Sinéctica (método creativo basado en el uso de las analogías) insistía en que “se trata de poner en paralelo mediante este mecanismo unos hechos, unos conocimientos o unas disciplinas distintas”. Por ejemplo, un problema empresarial lo intentamos resolver buscando algún problema análogo en otras disciplinas: en la biología, en la historia, en un deporte colectivo, etc.
       .jumbotron.bg-white
@@ -206,7 +206,7 @@
             h2 Intersección:
             p “Se necesita un ciclón a domicilio… una tromba de agua… vertical… las paredes serán cilindros que encajan… cuando no nos servimos de ella, formará un asiento o un elemento decorativo…en servicio será un cilindro…y los chorros de agua partirán del suelo o de las paredes y reconstruirán nuestro ciclón…”
 
-            h2 Conexiones morfológicas forzadas
+            h2 1.3.1.4 Conexiones morfológicas forzadas
             .col.auto
             img.img-a.my-3(src="assets/images/pages/ilustraciones/Trazado_23654.svg").img-fluid
                
@@ -222,7 +222,7 @@
         .row.justify-content-center.align-items-center
         .col.auto
           
-          h2 El arte de preguntar
+          h2 1.3.1.5 El arte de preguntar
 
           p Alex Osborn, experto en creatividad y creador del Brainstorming, afirmaba que “la pregunta es la más creativa de las conductas humanas”. Osborn desarrolló una serie de preguntas para el Brainstorming que pueden aplicarse en la exploración del problema. 
 
@@ -274,7 +274,7 @@
             .row.justify-content-center.align-items-center
                 .col-auto
 
-                h3 Listas cruzadas
+                h3 1.3.1.6 Listas cruzadas
 
                 p Consiste en hallar ideas confrontando elementos lejanos entre sí, desde el punto de vista morfológico, sintáctico o utilitario para generar nuevas funciones, formas e ideas.
 
@@ -297,7 +297,7 @@
             .row.justify-content-center.align-items-center
                 .col-auto
 
-                 h2 Mapas mentales: 
+                 h2 1.3.1.7 Mapas mentales
 
                  p s una técnica creada por Tony Buzan, investigador en el campo de la inteligencia y presidente de la Brain Foundation.
 
@@ -311,7 +311,7 @@
 
                 p Los mapas mentales se pueden mejorar y enriquecer con colores, imágenes, códigos y dimensiones que les añaden interés, belleza e individualidad.
 
-                h2 SCAMPER
+                h2 1.3.1.8 SCAMPER
 
                 p Es una lista de preguntas que estimulan la generación de ideas. Alex Osborn, el creador del Brainstorming, estableció las primeras. Más tarde fueron dispuestas por Bob Eberle en este mnemotécnico:
 
@@ -327,7 +327,7 @@
                 .col-auto
                   img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_16267.svg").img-fluid
 
-                h2 Evaluación de las ideas
+                h2 1.3.1.9 Evaluación de las ideas
 
                 p Durante este proceso se han generado respuestas a las preguntas planteadas; muchas de ellas serán ideas que deben ser evaluadas, de acuerdo con unos criterios que pueden ser elaborados por los componentes del grupo o que ya se han establecido con anterioridad.
                 
