--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -42,7 +42,8 @@
               
               img.img-a(src="assets/images/pages/ilustraciones/Grupo_14118.svg").img-fluid
 
-      .jumbotron.bg-white.mt-0
+        .recuadro-gris
+      
               img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14132.svg").img-fluid.mt-5
              
               p Las soluciones creativas son fruto de un trabajo previo intenso que incluye el ensayo y el error en pruebas, es producto de aproximaciones y de cambios.
@@ -53,55 +54,45 @@
               .col-2 
 
               p En el ámbito de la publicidad y la comunicación, la creatividad se hace necesaria e indispensable, ya que los anunciantes están siempre en la búsqueda de agencias o publicistas que realicen para ellos anuncios que marquen la diferencia y den un toque de originalidad y diferenciación a sus productos frente a la competencia. Sin embargo, en la realización publicitaria la creatividad tiene cabida en todos los frentes: medios, estrategias, redacción de textos, creación de imágenes, merchandising y promoción de ventas.
-
+              
                img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14119.svg").img-fluid
              
       .jumbotron.bg-white
+          .row.justify-content-center.align-items-center
               .col 
                 h1 1.3.	El proceso creativo
 
                   h2 El proceso creativo implica varios aspectos:
-                      
-      .jumbotron.bg-2.mt-5
-            .row.justify-content-center.align-items-center
-              .col-12
+
+              .recuadro-yellow
 
                 p Fluidez: esta característica se refiere a la generación copiosa y rápida de ideas; para el desarrollo de una gran idea es necesario tener cientos de ellas.
+                 
+              .recuadro-yellow
 
-      .jumbotron.bg-2.mt-5
-            .row.justify-content-center.align-items-center
-              .col-12
                 p Flexibilidad: el desarrollo creativo implica el poder de la adaptación, las ideas pueden llegar desde cualquier dirección y es necesario tener la capacidad de tomar una alternativa y convertirla en solución. La flexibilidad implica también el rechazo de ideas valiosas que por una u otras circunstancias pierden aplicabilidad. El creativo debe ser flexible para poder adaptar cualquiera de ellas de la forma más adecuada posible para generar soluciones eficientes.  
 
-      .jumbotron.bg-white 
+              img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14135.svg").img-fluid
 
-                img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14135.svg").img-fluid
-
-      .jumbotron.bg-2.mt-5
-            .row.justify-content-center.align-items-center
-              .col-12
+              .recuadro-yellow
 
                 p Originalidad: la originalidad no se refiere necesariamente a que algo es único o irrepetible, las ideas originales pueden darse también a través de la forma como se llevan a cabo o se presentan, aquí es donde se hace presente el pensamiento lateral; es decir, pensar de una forma un poco diferente de lo que pensaría el común de la gente, entendido como la realización de acciones con otras versiones diferentes.    
 
-      .jumbotron.bg-2.mt-5
-            .row.justify-content-center.align-items-center
-              .col-12
-                p Ejecución: en ocasiones, el llevar a cabo una idea es más complejo que plantearla; por ello, el creativo debe ser también un realizador de ella y saber acudir a los recursos disponibles para llevarla a cabo. Muchas veces es en su ejecución, en donde esta se convierte en grande y es en ese momento, donde el profesional debe tener la capacidad de tomar cualquier idea, transformarla, mejorarla y generar con ella soluciones innovadoras.
+              .recuadro-yellow
 
-      .jumbotron.bg-white
+                p Ejecución: en ocasiones, el llevar a cabo una idea es más complejo que plantearla; por ello, el creativo debe ser también un realizador de ella y saber acudir a los recursos disponibles para llevarla a cabo. Muchas veces es en su ejecución, en donde esta se convierte en grande y es en ese momento, donde el profesional debe tener la capacidad de tomar cualquier idea, transformarla, mejorarla y generar con ella soluciones innovadoras.
 
                 p Para llevar a cabo el proceso creativo, es importante contar con toda la información posible del problema que se busca solucionar, así como tener claro que la creatividad no es un chispazo que llega de la nada generando ideas asombrosas; por el contrario, implica un diagnóstico previo de las situaciones para las que se están generando ideas, ya que suena imposible pensar en algo que no se conoce o de lo que no se sabe nada. Es por esto por lo que, en campos como la publicidad, el diseño o la producción audiovisual, el primer paso para el desarrollo creativo sea el brief.
       
                 p Para el desarrollo de la creatividad, no hay una fórmula mágica, porque no todas las personas piensan de la misma manera, pues para algunas es más efectivo meditar, para otros caminar y para otros tomar notas y hacer dibujos o mamarrachos en una hoja; lo cierto, es que todas las personas son creativas, la diferencia radica en que algunas tienen ideas constantemente y las llevan a cabo.
 
-                p A continuación, se verán algunos de los métodos más populares para el proceso creativo y la forma como se llevan a cabo. Se relacionan, sobre todo, los más utilizados en el desarrollo de estrategias de comunicación y publicidad:
-
-                img.img-a.my-3(src="assets/images/pages/ilustraciones/linebreak.svg").img-fluid
-
       .jumbotron.bg-white.mt-5   
         .sub-ecored
             .row.justify-content-center.align-items-center
-                .col-auto     
+                .col-auto   
+
+                p A continuación, se verán algunos de los métodos más populares para el proceso creativo y la forma como se llevan a cabo. Se relacionan, sobre todo, los más utilizados en el desarrollo de estrategias de comunicación y publicidad:
+
                 img.img-a.my-3(src="assets/images/pages/ilustraciones/Grupo_14173.svg").img-fluid
                 
                 .col-2 
