--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -2,6 +2,7 @@
 
      .header-ecored
      .jumbotron.bg-white
+     .sub-ecored.mt-5#tema2_1
       h1 2. La estrategia creativa
 
       .embed-responsive.embed-responsive-16by9.mt-5
@@ -18,7 +19,7 @@
           .sub-ecored-teme
           .row.justify-content-center.align-items-center
           .col-auto 
-
+          .sub-ecored.mt-5#tema2_2
           h2 2.1 Desarrollo de la estrategia
 
           img.img-a.my-5(src="assets/images/pages/ilustraciones/men.svg").img-fluid
